# designing-mcp-interface_test

./: README.md  analysis.py  app.py  conftest.py  git_utils.py  mock_git_utils.py  pyproject.toml  security.py  server.py  tools.py
.github/workflows/: grade.yml
config/: allowed_repos.json
docs/: interface.md
scripts/: grade.py
