[project]
name = "git-activity-analyzer"
version = "0.1.0"
description = "MCP server for Git Activity Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
